--- a/index.html
+++ b/index.html
@@ -398,10 +398,10 @@
                 </a-text>
             </a-entity>
 
-            <!-- Status Indicator (for debugging) -->
-            <a-text 
+            <!-- Status Indicator -->
+            <a-text
                 id="statusText"
-                position="0 -0.5 -2.2"
+                position="0 0.8 -2.5"
                 value="ClearPath Loading..."
                 color="#10B981"
                 width="2.5"
